--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -130,6 +130,7 @@ text-decoration: none;
     footer #in-footer a{
             padding: 4px 4px;
             font-weight: bold;
+        margin-bottom: 20px;
     }
     #two div{
 display: grid;
