--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -47,7 +47,7 @@ h2{
     height: 40vh;
     margin:0 auto;
     margin-top: 10px;
-    background-image: url("./resources/imgs/pexels-pixabay-2159.jpg");
+    background-image: url("../resources/imgs/pexels-pixabay-2159.jpg");
     background-repeat: no-repeat;
     background-color: blue;
     background-size: cover;
